✨ Big refactor and update for the whole web

--- a/src/assets/data/posts/0011.exploring-the-power-of-bun.md
+++ b/src/assets/data/posts/0011.exploring-the-power-of-bun.md
@@ -1,4 +1,4 @@
-# An h1 header
+![My experience with bun js, is it better than node and deno? [CAPTION]](https://github-production-user-asset-6210df.s3.amazonaws.com/3084745/266450546-379f2213-fd3e-4223-bb8e-25adfa1e61cc.png)
 
 Paragraphs are separated by a blank line.
 
@@ -30,23 +30,27 @@ Here's a numbered list:
 2.  second item
 3.  third item
 
+
 Note again how the actual text starts at 4 columns in (4 characters
 from the left side). Here's a code sample:
 
-    # Let me re-iterate ...
-    for i in 1 .. 10 { do-something(i) }
+```bash
+bun reload.js --hot
+```
 
 As you probably guessed, indented 4 spaces. By the way, instead of
 indenting the block, you can use delimited blocks, if you like:
 
 ```javascript
-function foobar() {
-  return "hola";
-}
+import lodash from "lodash";
+const _ = require("underscore");
+
+const response = await fetch("https://example.com/");
+const text = await response.text();
 ```
 
 (which makes copying & pasting easier). You can optionally mark the
-delimited block for Pandoc to syntax highlight it:
+delimited block for Pandoc to syntax highlight it: `test`
 
 ```python
 import time
@@ -72,17 +76,6 @@ Now a nested list:
     - lentils
 
 2.  Boil some water.
-
-3.  Dump everything in the pot and follow
-    this algorithm:
-
-        find wooden spoon
-        uncover pot
-        stir
-        cover pot
-        balance wooden spoon precariously on pot handle
-        wait 10 minutes
-        goto first step (or shut off burner when done)
 
     Do not bump wooden spoon or it will fall.
 
@@ -149,8 +142,6 @@ Here's a "line block":
 | Line tree
 
 and images can be specified like so:
-
-![example image](example-image.jpg "An exemplary image")
 
 Inline math equations go in like so: $\omega = d\phi / dt$. Display
 math should get its own line and be put in in double-dollarsigns:
