--- a/src/assets/data/posts/en/001.exploring-the-power-of-bun.md
+++ b/src/assets/data/posts/en/001.exploring-the-power-of-bun.md
@@ -1,3 +1,3 @@
 ![My experience with bun js, is it better than node and deno? [CAPTION]](https://github-production-user-asset-6210df.s3.amazonaws.com/3084745/266450546-379f2213-fd3e-4223-bb8e-25adfa1e61cc.png)
 
-Will be published in 3 days...
+Will be published on the 5th of August ✨
